--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "graphql-yoga": "^1.14.6",
+    "jsonwebtoken": "^8.2.2",
     "nodemon": "^1.17.5",
     "prisma-binding": "^2.0.2"
   }
